--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 label {
   padding-bottom: rem-calc(3px);
   line-height: 1.3;
@@ -320,7 +321,7 @@ textarea.error,
       display: block;
       top: 0.5em;
       right: 0.5em;
-      background: transparent icon(reset-field, none, 32px, 32px, 0, 0, 24, 24, lighten($medium-gray, 10%), 2, "stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;") no-repeat center center;
+      background: transparent icon(reset-field, none, 32px, 32px, 0, 0, 24, 24, color.scale($medium-gray, $lightness: 10%), 2, "stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;") no-repeat center center;
       height: 1rem;
       width: 1rem;
       transition: background 0.25s ease-out;
@@ -328,17 +329,17 @@ textarea.error,
     &:hover,
     &:focus {
       &::after {
-        background: transparent icon(reset-field, none, 32px, 32px, 0, 0, 24, 24, darken($medium-gray, 5%), 2, "stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;") no-repeat center center;
+        background: transparent icon(reset-field, none, 32px, 32px, 0, 0, 24, 24, color.scale($medium-gray, $lightness: -5%), 2, "stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;") no-repeat center center;
       }
     }
   }
   &:not(:placeholder-shown) + .reset-filter::after{
-    background: transparent icon(reset-field, none, 32px, 32px, 0, 0, 24, 24, lighten($dark-gray, 10%), 2, "stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;") no-repeat center center;
+    background: transparent icon(reset-field, none, 32px, 32px, 0, 0, 24, 24, color.scale($dark-gray, $lightness: 10%), 2, "stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;") no-repeat center center;
   }
 }
 
 .module-form {
-  border: 2px solid darken($light-gray, 3.7%);
+  border: 2px solid color.scale($light-gray, $lightness: -3.7%); // darken($light-gray, 3.7%);
   border-radius: 6px 6px 0 0;
   position: relative;
   margin-bottom: $gutter;
@@ -364,11 +365,6 @@ textarea.error,
       position: relative;
       display: inline-block;
       line-height: 1;
-      padding: rem-calc(10);
-      @include breakpoint(medium) {
-        padding: rem-calc(10 20);
-      }
-      color: map-get($colors, blue5);
       background: $light-gray;
       text-transform: uppercase;
       font-weight: $global-weight-medium;
@@ -385,6 +381,11 @@ textarea.error,
       &:hover,
       &:focus {
         background: scale-color($light-gray, $lightness: -5%);
+      }
+      padding: rem-calc(10);
+      color: map-get($colors, blue5);
+      @include breakpoint(medium) {
+        padding: rem-calc(10 20);
       }
     }
     .button-collapse::after {
@@ -521,55 +522,57 @@ input:-internal-autofill-selected {
         min-width: rem-calc(410);
       }
     }
-    tbody tr {
-      border: rem-calc(1) solid $light-gray;
-      border-width: rem-calc(1 2);
-    }
-    tr {
-      > .shrink {
-        width: rem-calc(100);
+    & {
+      tbody tr {
+        border: rem-calc(1) solid $light-gray;
+        border-width: rem-calc(1 2);
       }
-      > .large-shrink {
-        @include breakpoint(large) {
-          width: rem-calc(250);
+      tr {
+        > .shrink {
+          width: rem-calc(100);
         }
-      }
-    }
-    tr:has(> :nth-child(4):last-child) {
-      td, th {
-        @include breakpoint(large) {
-          &:nth-child(2) {
-            order: 4;
-          }
-          &:nth-child(3) {
-            order: 2;
-          }
-          &:nth-child(4) {
-            order: 3;
+        > .large-shrink {
+          @include breakpoint(large) {
+            width: rem-calc(250);
           }
         }
       }
-    }
-    tr:has(> :nth-child(3):last-child) {
-      @include breakpoint(large) {
+      tr:has(> :nth-child(4):last-child) {
         td, th {
-          &:nth-child(2) {
-            order: 3;
-          }
-          &:nth-child(3) {
-            order: 2;
+          @include breakpoint(large) {
+            &:nth-child(2) {
+              order: 4;
+            }
+            &:nth-child(3) {
+              order: 2;
+            }
+            &:nth-child(4) {
+              order: 3;
+            }
           }
         }
       }
-    }
-    thead th.large-auto {
-      @include breakpoint(medium down) {
-        border-bottom-width: rem-calc(1);
+      tr:has(> :nth-child(3):last-child) {
+        @include breakpoint(large) {
+          td, th {
+            &:nth-child(2) {
+              order: 3;
+            }
+            &:nth-child(3) {
+              order: 2;
+            }
+          }
+        }
       }
-    }
-    td.grid-x.large-shrink > div.large-shrink{
-      flex: auto;
-    }
+      thead th.large-auto {
+        @include breakpoint(medium down) {
+          border-bottom-width: rem-calc(1);
+        }
+      }
+      td.grid-x.large-shrink > div.large-shrink{
+        flex: auto;
+      }
+    }    
   }
   tr.background-concrete, tr:nth-child(odd).background-concrete{
     background: $light-gray;
