--- a/scss/components/_nav-footer.scss
+++ b/scss/components/_nav-footer.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 .footer {
   font-size: rem-calc(17);
   a {
@@ -16,11 +17,11 @@
   @include breakpoint(large) {
     background: map-get($colors, navy5)
     repeating-linear-gradient(147deg,
-    lighten(map-get($colors, navy5), 8%) 0%,
-    lighten(map-get($colors, navy5), 8%) 21.5%,
-    lighten(map-get($colors, navy5), 5%) 21.5%,
-    lighten(map-get($colors, navy5), 5%) 39.25%,
-    lighten(map-get($colors, navy5), 2%) 39.25%,
+    color.scale(map-get($colors, navy5), $lightness:  8%) 0%,
+    color.scale(map-get($colors, navy5), $lightness:  8%) 21.5%,
+    color.scale(map-get($colors, navy5), $lightness:  5%) 21.5%,
+    color.scale(map-get($colors, navy5), $lightness:  5%) 39.25%,
+    color.scale(map-get($colors, navy5), $lightness:  2%) 39.25%,
     map-get($colors, navy5) 100%);
   }
   @include breakpoint(medium){
