--- a/scss/components/_nav-tertiary.scss
+++ b/scss/components/_nav-tertiary.scss
@@ -1,4 +1,5 @@
 @use 'sass:math';
+@use 'sass:color';
 $tertiary-gap: $gutter * 1.5;
 $tertiary-border-color:  rgba($medium-gray, 0.6);  //scale-color($light-gray, $lightness: -5%);
 
