--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -1,10 +1,10 @@
 @use 'sass:math';
+@use 'sass:color';
 // headers inherit weight from $header-font-weight
 // and line-height from  $header-lineheight
 // and bottom margin from $header-margin-bottom
 h1,
 .h1 {
-  @include fluid-type(35px, 45px, xlarge);
   line-height: math.div(50, 45);
   font-weight: $global-weight-light;
   .hero-roofline & {
@@ -12,7 +12,6 @@ h1,
   }
   &.jumbo {
     line-height: math.div(80, 65);
-    @include fluid-type(35px, 65px, xlarge);
     font-weight: $global-weight-light;
   }
 }
@@ -44,9 +43,9 @@ h2, .h2 {
 h3,
 .h3 {
   line-height: 1.3;
-  @include fluid-type(20px, 22px, medium);
   margin-bottom: 0.25em;
   font-weight: $global-weight-medium;
+  @include fluid-type(20px, 22px, medium);
 }
 //articles prefer to use h3 instead of h2, since they feel h2 is too large, and they want their H3 to be heavier weight
 h4,
@@ -118,33 +117,33 @@ figcaption {
 }
 .callout-footer-title {
   line-height: math.div(50, 45);
-  @include fluid-type(30px, 45px, xlarge);
   font-weight: $global-weight-light;
+  @include fluid-type(30px, 45px, xlarge);
 }
 .subtitle {
-  @include fluid-type(18px, 26px, xlarge);
   font-weight: $global-weight-bold;
   margin: 0.25em 0 0.375em;
+  @include fluid-type(18px, 26px, xlarge);
   @include breakpoint(xxlarge) {
     @include fluid-type(22px, 32px, xxlarge);
   }
 }
 .feature-subtitle {
-  @include fluid-type(18px, 26px, xlarge);
   font-weight: $global-weight-normal;
   margin: 0.25em 0 0.375em;
+  @include fluid-type(18px, 26px, xlarge);
 }
 .sidebar-title {
   line-height: math.div(38, 28);
-  @include fluid-type(21px, 28px, xlarge);
   margin-bottom: 0.5em;
+  @include fluid-type(21px, 28px, xlarge);
 }
 
 .sidebar-subtitle {
-  @include fluid-type(17px, 24px, xxlarge);
   font-weight: $global-weight-medium;
   margin: 0 0 0.375em;
   line-height: 1.2;
+  @include fluid-type(17px, 24px, xxlarge);
 }
 .sidebar-headline {
   font-size: rem-calc(18px);
@@ -155,34 +154,36 @@ figcaption {
   }
 }
 .stat-points {
-  @include fluid-type(14px, 16px, xlarge);
   font-weight: $global-weight-normal;
   margin-bottom: 0;
+  @include fluid-type(14px, 16px, xlarge);
   @include breakpoint(large) {
     margin-bottom: 0.5em;
     font-weight: $global-weight-bold;
   }
 }
 .section-subtitle {
-  @include fluid-type(18px, 22px, xxlarge);
   color: inherit;
   font-weight: inherit;
   margin-bottom: 0.25rem;
   + .section-subtitle {
     margin-top: 0.5em;
   }
+  @include fluid-type(18px, 22px, xxlarge);
 }
 .article-headline {
   margin: 0.15em 0 0.45em;
-  @include fluid-type(16px, 22px, xxlarge);
-  @if variable-exists(global-weight-regular) {
-    font-weight: $global-weight-regular;
-  }
   strong {
     font-weight: $global-weight-medium;
   }
   .article-date-lg + & {
     margin-top: 0;
+  }
+  & {
+    @if variable-exists(global-weight-regular) {
+      font-weight: $global-weight-regular;
+    }
+    @include fluid-type(16px, 22px, xxlarge);
   }
 }
 
@@ -196,7 +197,6 @@ figcaption {
 .article-category,
 .article-date,
 .article-date-lg {
-  @include fluid-type(14px, 16px, medium);
   font-weight: $global-weight-normal;
   color: inherit;
   margin: 0.25em 0;
@@ -204,6 +204,7 @@ figcaption {
   .sidebar:not(.events) & {
     margin-bottom: 0.65em;
   }
+  @include fluid-type(14px, 16px, medium);
 }
 .sidebar .article-category {
   color: map-get($colors, navy1);
@@ -215,11 +216,11 @@ figcaption {
   font-weight: $global-weight-medium;
 }
 .article-byline {
-  @include fluid-type(15px, 16px, medium);
   color: inherit;
   line-height: 1.2;
   font-weight: inherit;
   margin-top: 0.6em;
+  @include fluid-type(15px, 16px, medium);
 }
 .article-byline-strong {
   color: $dark-gray;
@@ -227,11 +228,11 @@ figcaption {
   font-size: rem-calc(16);
 }
 .article-byline-small {
-  @include fluid-type(13px, 14px, medium);
   line-height: 1.25;
   strong {
     font-weight: $global-weight-regular;
   }
+  @include fluid-type(13px, 14px, medium);
 }
 .flex-up {
   @include fluid-type(16px, 18px, large);
@@ -243,11 +244,11 @@ figcaption {
   display: none;
 }
 .article-blurb-lg {
-  @include show-for(medium);
-  @include fluid-type(14px, 18px, xxlarge);
   font-weight: inherit;
   line-height: 1.3;
   margin: 0.8em 0;
+  @include show-for(medium);
+  @include fluid-type(14px, 18px, xxlarge);
   @media screen and (min-width: -zf-bp-to-em(map-get($breakpoints, medium))) and (max-width: -zf-bp-to-em(map-get($breakpoints, medium) + 80px)) {
     overflow: hidden;
     max-height: 3.9em; /* (Number of lines you want visible) * (line-height) */
@@ -258,30 +259,30 @@ figcaption {
   padding-bottom: rem-calc(5);
 }
 .article-date-feature {
-  @include fluid-type(14px, 18px, xxlarge);
   font-weight: $global-weight-medium;
   color: inherit;
+  @include fluid-type(14px, 18px, xxlarge);
 }
 .hero-subtitle {
-  @include fluid-type(20px, 28px, xxlarge);
   font-weight: inherit;
   margin-bottom: $global-margin * 2;
   line-height: 1.2;
+  @include fluid-type(20px, 28px, xxlarge);
 }
 .hero-date {
-  @include fluid-type(16px, 20px, xxlarge);
   font-weight: $global-weight-medium;
+  @include fluid-type(16px, 20px, xxlarge);
 }
 .stat-sm {
-  @include fluid-type(18px, 28px, xxlarge);
   line-height: 1.1;
   width: 100%;
   font-weight: $global-weight-bold;
   white-space: nowrap;
+  @include fluid-type(18px, 28px, xxlarge);
 }
 .stat {
-  @include fluid-type(28px, 58px, xxlarge);
   letter-spacing: rem-calc(-1.15px);
+  @include fluid-type(28px, 58px, xxlarge);
 }
 p.stat {
   margin-bottom: 0.2em;
@@ -298,22 +299,21 @@ p.stat {
 }
 .cross-promo-title {
   line-height: math.div(38, 28);
-  @include fluid-type(22px, 28px, xlarge);
   font-weight: $global-weight-normal;
+  @include fluid-type(22px, 28px, xlarge);
 }
 .card-title {
   line-height: math.div(25, 20);
-  @include fluid-type(18px, 22px, xlarge);
   color: inherit;
   font-weight: $global-weight-normal;
   margin-bottom: 0.45rem;
   .card-section &:nth-last-child(2) {
     flex-grow: 0;
   }
-
   strong {
     font-weight: $global-weight-medium;
   }
+  @include fluid-type(18px, 22px, xlarge);
 }
 .card-subtitle {
   margin: 0.5em 0;
@@ -323,15 +323,15 @@ p.stat {
   @include show-for(medium);
 }
 .card-blurb-large {
-  @include show-for(medium);
-  @include fluid-type(14px, 16px, xxlarge);
   font-weight: inherit;
   display: none;
+  @include show-for(medium);
+  @include fluid-type(14px, 16px, xxlarge);
 }
 .video-length {
-  @include fluid-type(16px, 21px, xxlarge);
   line-height: 1;
   font-weight: $global-weight-normal;
+  @include fluid-type(16px, 21px, xxlarge);
 }
 .snug {
   line-height: 1.1;
